--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>PayFlex – Smart Payments </title></head>
+<body>
+<header>
+    <div class="container">
+        <div class="logo">PayFlex</div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </nav>
+        <button class="btn-glass">Get Started</button>
+    </div>
+</header>
+<section class="hero">
+    <div class="hero-text">
+        <h1>Smart Payments. Simplified.</h1>
+        <p>Enterprise-grade financial operations designed for precision, clarity, and performance.</p>
+        <div class="hero-buttons">
+            <button class="btn-primary">Start Free Trial</button>
+            <button class="btn-glass">See Demo</button>
+        </div>
+    </div>
+    <img src="c:\Users\LENOVO\OneDrive\Documentos\Pictures\Screenshots\Screenshot 2025-11-26 230539.png" alt="Workspace Image">
+</section>
+<div class="glass-section">
+    <h2 class="section-title">Powerful Features for Modern Businesses</h2>
+    <div class="features-grid">
+        <div class="card">
+            <img src="c:\Users\LENOVO\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\5913D59F293D112C732DEFB439E6909CAE190F62\transfers\2025-48\WhatsApp Image 2025-11-26 at 7.59.13 PM.jpeg" alt="Secure Transactions Icon" />
+            <h3>Secure Transactions</h3>
+            <p>End-to-end encryption ensures peace of mind for every transaction.</p>
+        </div>
+        <div class="card">
+            <img src="c:\Users\LENOVO\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\5913D59F293D112C732DEFB439E6909CAE190F62\transfers\2025-48\WhatsApp Image 2025-11-26 at 7.59.47 PM.jpeg" alt="API Integration Icon" />
+            <h3>API Integration</h3>
+            <p>Seamlessly connect your systems using our robust REST APIs.</p>
+        </div>
+        <div class="card">
+            <img src="c:\Users\LENOVO\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\5913D59F293D112C732DEFB439E6909CAE190F62\transfers\2025-48\WhatsApp Image 2025-11-26 at 8.00.23 PM.jpeg" alt="Mobile App Icon" />
+            <h3>Mobile App</h3>
+            <p>Manage payments on the go with our professional enterprise mobile app.</p>
+        </div>
+    </div>
+</div>
+<h2 class="section-title">How It Works</h2>
+<div class="how-grid">
+    <div class="card">
+        <img src=" c:\Users\LENOVO\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\5913D59F293D112C732DEFB439E6909CAE190F62\transfers\2025-48\WhatsApp Image 2025-11-27 at 12.33.38 PM.jpeg" alt="Sign Up Icon">
+        <h3>Create Account</h3>
+        <p>Sign up in minutes and access your dashboard instantly.</p>
+    </div>
+    <div class="card">
+        <img src="c:\Users\LENOVO\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\5913D59F293D112C732DEFB439E6909CAE190F62\transfers\2025-48\WhatsApp Image 2025-11-26 at 8.01.49 PM.jpeg" alt="Connect Accounts Icon">
+        <h3>Connect Accounts</h3>
+        <p>Securely link bank accounts, payment tools, and financial services.</p>
+    </div>
+    <div class="card">
+        <img src="c:\Users\LENOVO\AppData\Local\Packages\5319275A.WhatsAppDesktop_cv1g1gvanyjgm\LocalState\sessions\5913D59F293D112C732DEFB439E6909CAE190F62\transfers\2025-48\WhatsApp Image 2025-11-26 at 8.02.16 PM.jpeg" alt="Start Transacting Icon">
+        <h3>Start Transacting</h3>
+        <p>Send, receive, and automate financial workflows effortlessly.</p>
+    </div>
+</div>
+<section class="analytics">
+    <h2>Insights With Real-Time Analytics</h2>
+    <p>Visualize cashflow, monitor transactions, and make data-driven decisions with clarity.</p>
+    <img src="c:\Users\LENOVO\OneDrive\Documentos\Pictures\Screenshots\Screenshot 2025-11-26 224836.png" alt="Analytics Dashboard">
+</section>
+<h2 class="section-title">Simple, Transparent Pricing</h2>
+<section class="pricing-grid">
+    <div class="price-card">
+        <h3>Basic</h3>
+        <p>For individuals & small teams</p>
+        <div class="amount">$9/mo</div>
+        <button class="btn-primary">Choose Plan</button>
+    </div>
+    <div class="price-card">
+        <h3>Pro</h3>
+        <p>For growing businesses</p>
+        <div class="amount">$99/mo</div>
+        <button class="btn-primary">Choose Plan</button>
+    </div>
+    <div class="price-card">
+        <h3>Enterprise</h3>
+        <p>Full enterprise-grade features</p>
+        <div class="amount">$999/mo</div>
+        <button class="btn-primary">Contact Sales</button>
+    </div>
+    <footer style="width:313%; text-align:center; color:white; padding-top:75px ; font-size:14px; font-size: 18px;">
+  © 2025 PayFlex. All Rights Reserved
+    </footer>
+</section>
+</body>
+</html>
